src/objects/Searches__c.object
<CustomObject>
    <fields>
        <fullName>Tax__c</fullName>
        <label>Tax if applicable</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Temporary_Address_With_Unit__c</fullName>
        <formula>Street_Addr1__c&amp;IF( LEN(Unit__c) &gt; 0 , &quot; &quot;, &quot;&quot;) &amp; Unit__c&amp;IF( LEN(Street_Addr2__c) &gt; 0 , &quot; &quot;, &quot;&quot;) &amp; Street_Addr2__c &amp; &quot;,&quot; &amp; City__c &amp; &quot;, &quot; &amp; State__c &amp; &quot; &quot; &amp; Zip__c &amp; &quot;, &quot; &amp; Country__c</formula>
        <label>Temporary Address With Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temporary_Address__c</fullName>
        <formula>Street_Addr1__c&amp;IF( LEN(Street_Addr2__c) &gt; 0 , &quot; &quot;, &quot;&quot;) &amp; Street_Addr2__c &amp; &quot;,&quot; &amp;  City__c  &amp; &quot;, &quot; &amp; State__c  &amp; &quot; &quot; &amp;  Zip__c &amp; &quot;, &quot; &amp; Country__c</formula>
        <label>Temporary Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tentative_Move_Out_Date__c</fullName>
        <label>Tentative Move out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Costs__c</fullName>
        <label>Total Costs</label>
        <summarizedField>Costs__c.Monthly_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Costs__c.Billable_Party__c</field>
            <operation>equals</operation>
            <value>Adjuster</value>
        </summaryFilterItems>
        <summaryForeignKey>Costs__c.Searches__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Deposits__c</fullName>
        <label>Total Deposits</label>
        <summarizedField>Costs__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Costs__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Deposit</value>
        </summaryFilterItems>
        <summaryForeignKey>Costs__c.Searches__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Fees__c</fullName>
        <label>Total Fees</label>
        <summarizedField>Costs__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Costs__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Fee</value>
        </summaryFilterItems>
        <summaryForeignKey>Costs__c.Searches__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Landlord_Costs__c</fullName>
        <label>Total Landlord Costs</label>
        <summarizedField>Costs__c.Landlord_Monthly_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Costs__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Cost</value>
        </summaryFilterItems>
        <summaryForeignKey>Costs__c.Searches__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Pet_Fees__c</fullName>
        <label>Total Pet Fees</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <label>Unit #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utilities_Included_In_Rent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Utilities included in Rent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Utilities_PH_Is_Responsible_For__c</fullName>
        <label>Utilities PH is responsible for</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utility_Set_Up_Fee__c</fullName>
        <label>Utility Set Up Fee</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>What_Is_Included_In_The_Prorated_Rent__c</fullName>
        <label>What is included in the Prorated Rent</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_Utilities_Are_Included_In_Rent__c</fullName>
        <label>What Utilities are included in Rent</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Where_To_Send_NTV__c</fullName>
        <label>Where to send NTV</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Window_Covering_Fee__c</fullName>
        <label>Window Covering Fee</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Window_Coverings_Present__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Window Coverings Present</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wood_Floors__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wood Floors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X1st_Available_Move_In_Date_Time__c</fullName>
        <label>1st Available Move In Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>X_1st_Available_Move_In_Date__c</fullName>
        <defaultValue>IF(AND(MOD( Today() - DATE(1900, 1, 6), 7)=6,$RecordType.Name = &apos;Housing&apos; ),Today()+3, Today())</defaultValue>
        <description>Set the default First Available Move In Date based on rules:
Hotels Rule:should be same day at 3:00pm or +1 hour if after 3:00pm
Housing Rule: 
Should be next day at 8:00am, unless on a Friday, then should be Monday @ 8:00am</description>
        <label>1st Available Move In Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip/Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Search</label>
    <listViews>
        <fullName>All_Hotel_Searches</fullName>
        <columns>NAME</columns>
        <columns>Hotel__c</columns>
        <columns>Hotel_Name__c</columns>
        <columns>Selected__c</columns>
        <columns>Service_Request__c</columns>
        <columns>State__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Searches__c.Hotel</value>
        </filters>
        <label>All Hotel Searches</label>
    </listViews>
    <listViews>
        <fullName>All_Housing_Searches</fullName>
        <columns>NAME</columns>
        <columns>Property__c</columns>
        <columns>Selected__c</columns>
        <columns>Service_Request__c</columns>
        <columns>State__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Searches__c.Housing</value>
        </filters>
        <label>All Housing Searches</label>
    </listViews>
    <nameField>
        <displayFormat>SR-{000000}</displayFormat>
        <label>Search Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Searches</pluralLabel>
    <recordTypes>
        <fullName>FRV</fullName>
        <active>true</active>
        <label>FRV</label>
    </recordTypes>
    <recordTypes>
        <fullName>Finders_Fee</fullName>
        <active>true</active>
        <label>Finders Fee</label>
    </recordTypes>
    <recordTypes>
        <fullName>Hotel</fullName>
        <active>true</active>
        <description>For Hotel Requests</description>
        <label>Hotel</label>
    </recordTypes>
    <recordTypes>
        <fullName>Housing</fullName>
        <active>true</active>
        <description>For Housing Requests</description>
        <label>Housing</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>HotelLookup_Selected_Validation</fullName>
        <active>false</active>
        <description>Ensures that the Hotel lookup is complete before it can be selected</description>
        <errorConditionFormula>AND(LEN( Hotel__c )=0, $RecordType.Name  = &apos;Hotel&apos;, Selected__c = TRUE)</errorConditionFormula>
        <errorMessage>In order to select a Hotel, you must complete the Hotel Lookup.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PropertyLookup_Selected_Validation</fullName>
        <active>false</active>
        <description>Ensures that the property lookup is complete before it can be selected</description>
        <errorConditionFormula>AND(LEN( Property__c )=0, $RecordType.Name  = &apos;Housing&apos;, Selected__c = TRUE)</errorConditionFormula>
        <errorMessage>In order to select a Property, you must complete the Property Lookup.</errorMessage>
    </validationRules>
</CustomObject>